--- a/style.css
+++ b/style.css
@@ -4,22 +4,25 @@
     box-sizing: border-box;
 }
 
+.title{
+    padding: 1%;
+    border-bottom: 1px solid green;
+    width: max-content;
+    margin-bottom: 5vh;
+}
+
 .user-info{
     background-color: aliceblue;
     padding: 1%;
     margin: 1%;
     width: 50%;
-}
 
-.title{
-    padding: 1%;
-    border-bottom: 1px solid green;
-    width: max-content;
+    display: flex;
+    justify-content: space-between;
 }
 
 .btn{
     padding: 5px 15px;
-    margin: 5px;
     background-color: rgb(240, 247, 181);
     text-transform:uppercase;
     border: none;
@@ -29,4 +32,20 @@
 .btn:hover{
     color: green;
     cursor: pointer;
+}
+
+
+form{
+    margin-top: 5vh;
+    margin-left: 1%;
+}
+form input{
+    padding: 8px;
+    font-size: larger;
+}
+
+.error{
+    color: red;
+    margin: 1%;
+    padding: 1%;
 }
